<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<item android:title="@string/menu_opt_refresh" android:id="@+id/menu_detail_opt_refresh" android:icon="@drawable/ic_menu_refresh" android:showAsAction="always"></item>
    <item android:title="@string/menu_detail_opt_prio" android:id="@+id/menu_detail_opt_prio">
        <menu>
            <item android:title="@string/partfile_prio_auto" android:id="@+id/menu_detail_opt_prio_auto"></item>
            <item android:title="@string/partfile_prio_high" android:id="@+id/menu_detail_opt_prio_high"></item>
            <item android:title="@string/partfile_prio_normal" android:id="@+id/menu_detail_opt_prio_normal"></item>
            <item android:title="@string/partfile_prio_low" android:id="@+id/menu_detail_opt_prio_low"></item>
        </menu>
    </item>
    <item android:id="@+id/menu_detail_opt_a4af" android:title="@string/menu_detail_opt_a4af">
        <menu>
            <item android:title="@string/menu_detail_opt_a4af_now" android:id="@+id/menu_detail_opt_a4af_now"></item>
            <item android:title="@string/menu_detail_opt_a4af_auto" android:id="@+id/menu_detail_opt_a4af_auto"></item>
            <item android:title="@string/menu_detail_opt_a4af_away" android:id="@+id/menu_detail_opt_a4af_away"></item>
        </menu>
    </item>
    
</menu>
