<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout1"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  	<LinearLayout android:id="@+id/partfile_detail_titlebar" android:orientation="horizontal"  android:layout_height="wrap_content" android:layout_width="fill_parent">
  	
  		<TextView android:layout_weight="100"  android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/partfile_detail_filename" android:textColor="@color/detailTitle"></TextView>
  
	    <RelativeLayout android:layout_weight="1" android:layout_width="35dip" android:layout_height="35dip" android:id="@+id/partfile_detail_refresh_container" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
		     <ProgressBar android:id="@+id/partfile_detail_refresh" android:layout_height="fill_parent" android:layout_width="fill_parent" android:visibility="gone"></ProgressBar> 
		     <ImageView android:id="@+id/partfile_detail_button_refresh_new" android:src="@drawable/ic_menu_refresh" android:layout_height="fill_parent" android:layout_width="fill_parent" ></ImageView>
	    </RelativeLayout>
    
    </LinearLayout>
    
    <RelativeLayout android:id="@+id/partfile_detail_details" android:layout_height="wrap_content" android:layout_width="fill_parent">


	    <TextView
	   		android:id="@+id/textView2" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_below="@+id/partfile_detail_titlebar" 
	    	android:layout_alignParentLeft="true" 
	    	android:text="@string/partfile_detail_label_status" 
	    	android:paddingTop="15dip">
	   	</TextView>
	   	
	    <TextView 
	    	android:text="TextView" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView2" 
	    	android:layout_alignBottom="@+id/textView2" 
	    	android:layout_toRightOf="@+id/textView2" 
	    	android:id="@+id/partfile_detail_status">
	   	</TextView>
	
	
	    <TextView 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/textView12" 
	    	android:layout_alignBaseline="@+id/textView2" 
	    	android:layout_alignBottom="@+id/textView2" 
	    	android:layout_width="wrap_content"
	    	android:layout_toLeftOf="@+id/partfile_detail_priority" 
	    	android:text="@string/partfile_detail_label_priority">
	   	</TextView>
	    
	    <TextView 
	    	android:text="TextView" 
	    	android:layout_alignParentRight="true" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView2" 
	    	android:layout_alignBottom="@+id/textView2" 
	    	android:id="@+id/partfile_detail_priority">
	   	</TextView>
	
	    <TextView 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/textView4" 
	    	android:layout_width="wrap_content" 
	    	android:layout_below="@+id/partfile_detail_priority" 
	    	android:layout_alignParentLeft="true" 
	    	android:text="@string/partfile_detail_label_done">
	   	</TextView>
	   	
	    <TextView 
	    	android:text="TextView" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView4" 
	    	android:layout_alignBottom="@+id/textView4" 
	    	android:layout_toRightOf="@+id/textView4" 
	    	android:id="@+id/partfile_detail_done">
	   	</TextView>
	
	
	    <TextView 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/textView3" 
	    	android:layout_width="wrap_content" 
	    	android:layout_below="@+id/partfile_detail_priority" 
	    	android:layout_toLeftOf="@+id/partfile_detail_size" 
	    	android:layout_alignBaseline="@+id/textView4" 
	   		android:layout_alignBottom="@+id/textView4"
	    	android:text="@string/partfile_detail_label_size">
	   	</TextView>
	   	
	    <TextView 
	    	android:text="TextView" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView3" 
	    	android:layout_alignBottom="@+id/textView3" 
	    	android:layout_alignParentRight="true" 
	    	android:id="@+id/partfile_detail_size">
	   	</TextView>
	
	
	
	
	    <TextView android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_below="@+id/partfile_detail_done" android:layout_alignParentLeft="true" android:text="@string/partfile_detail_label_remaining"></TextView>
	    <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/textView5" android:layout_alignBottom="@+id/textView5" android:layout_toRightOf="@+id/textView5" android:id="@+id/partfile_detail_remaining"></TextView>
	
	
	
	    <TextView android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_below="@+id/partfile_detail_remaining" android:layout_alignParentLeft="true" android:text="@string/partfile_detail_label_sources" android:paddingTop="15dip"></TextView>
	
	    <TextView 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/textView7" 
	    	android:layout_width="wrap_content" 
	    	android:layout_below="@+id/textView6" 
	    	android:layout_alignParentLeft="true" 
	    	android:text="@string/partfile_detail_label_sources_available">
	   	</TextView>
	    <TextView 
	    	android:text="TextView" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView7" 
	    	android:layout_alignBottom="@+id/textView7" 
	    	android:layout_toRightOf="@+id/textView7" 
	    	android:id="@+id/partfile_detail_sources_available">
	   	</TextView>
	
	    <TextView 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/textView9" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView7" 
	    	android:layout_alignBottom="@+id/textView7"
	    	android:layout_toLeftOf="@+id/partfile_detail_sources_notcurrent" 
	    	android:text="@string/partfile_detail_label_sources_notcurrent">
	   	</TextView>
	    <TextView 
	    	android:text="TextView" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView7" 
	    	android:layout_alignBottom="@+id/textView7" 
	    	android:layout_alignParentRight="true"
	    	android:id="@+id/partfile_detail_sources_notcurrent">
	   	</TextView>
	   	
	   	
	   	
	
	    <TextView 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/textView10" 
	    	android:layout_width="wrap_content" 
	    	android:layout_below="@+id/textView7" 
	    	android:layout_alignParentLeft="true" 
	    	android:text="@string/partfile_detail_label_sources_active">
	   	</TextView>
	    <TextView 
	    	android:text="TextView" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView10" 
	    	android:layout_alignBottom="@+id/textView10" 
	    	android:layout_toRightOf="@+id/textView10" 
	    	android:id="@+id/partfile_detail_sources_active">
	   	</TextView>
	
	    <TextView 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/textView8" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView10" 
	    	android:layout_alignBottom="@+id/textView10"
	    	android:layout_toLeftOf="@+id/partfile_detail_sources_a4af" 
	    	android:text="@string/partfile_detail_label_sources_a4af">
	   	</TextView>
	    <TextView 
	    	android:text="TextView" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="wrap_content" 
	    	android:layout_alignBaseline="@+id/textView10" 
	    	android:layout_alignBottom="@+id/textView10" 
	    	android:layout_alignParentRight="true"
	   		android:id="@+id/partfile_detail_sources_a4af">
	   	</TextView>
	
	
		<TextView android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_below="@+id/partfile_detail_sources_active" android:layout_alignParentLeft="true" android:text="@string/partfile_detail_label_link" android:paddingTop="15dip"></TextView>
	    <TextView android:text="TextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/textView11"   android:id="@+id/partfile_detail_link" ></TextView>
		

	</RelativeLayout>
	
	<LinearLayout android:id="@+id/partfile_detail_comments" android:orientation="vertical" android:layout_height="0dip" android:layout_weight="1" android:layout_width="fill_parent">
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_below="@+id/partfile_detail_link" android:layout_alignParentLeft="true" android:layout_marginTop="15dp" android:text="@string/partfile_detail_label_comments"></TextView>
 		<ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/partfile_detail_comments_list" android:layout_below="@+id/textView13" android:layout_alignParentLeft="true"></ListView>
 	</LinearLayout>

	<LinearLayout android:id="@+id/partfile_detail_sourcenames" android:orientation="vertical" android:layout_height="0dip" android:layout_weight="1" android:layout_width="fill_parent">
		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView13" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:layout_marginTop="15dp" android:text="@string/partfile_detail_label_sorucenames"></TextView>
		<ListView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/partfile_detail_sourcenames_list" android:layout_below="@+id/textView13" android:layout_alignParentLeft="true"></ListView>
	</LinearLayout>

	<LinearLayout android:id="@+id/partfile_detail_dummylayout" android:orientation="vertical" android:layout_height="0dip" android:layout_weight="1" android:layout_width="fill_parent" android:visibility="gone">
	</LinearLayout>

   
	<LinearLayout android:layout_alignParentBottom="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/partfile_detail_control_buttons">	
	    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/partfile_detail_button_pause" android:text="@string/partfile_detail_button_pause"></Button>
	    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/partfile_detail_button_resume" android:text="@string/partfile_detail_button_resume"></Button>
	    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/partfile_detail_button_delete" android:text="@string/partfile_detail_button_delete"></Button>
    </LinearLayout>
	
	
</LinearLayout>
