<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/search_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/search_search_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_file_name"
        android:layout_below="@+id/search_file_name"
        android:layout_marginTop="14dp"
        android:entries="@array/search_search_type_description" />

    <Button
        android:id="@+id/search_button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/search_file_name"
        android:text="@string/search_button_go" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/search_search_type"
        android:text="@string/search_label_search_type" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/search_file_name"
        android:layout_alignBottom="@+id/search_file_name"
        android:layout_alignParentLeft="true"
        android:text="@string/search_label_file_name" />

</RelativeLayout>